[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.3.15"
noise = "0.8.2"
rand = "0.8.5"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.10.0"
quickcheck = "1.0.3"
imgui = "0.10.0"
glam = "0.22.0"
owning_ref = "0.4.1"
